--- a/src/components/titulo/lista/styles.css
+++ b/src/components/titulo/lista/styles.css
@@ -17,6 +17,7 @@
     justify-content: space-between;
     padding: 10px 10px;
 
+
 }
 
 .descricao {
@@ -28,4 +29,46 @@
 .bx {
     color: black;
     cursor: pointer;
+    margin: 0 4px;
+}
+
+.container_input {
+    margin-top: 25px;
+}
+
+
+.input {
+    width: 220px;
+    height: 40px;
+    padding: 10px 10px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.input::placeholder {
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Inter';
+    color: #20262E;
+}
+
+button {
+    width: 70px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: 700;
+
+    background: linear-gradient(90.28deg, #28A8A4 3.34%, #00FF85 99.79%);
+    border: none;
+    border-radius: 3px 15px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+button:hover {
+    opacity: 0.9;
 }
